<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/CBPlayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/player_1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TVPlayer1DeviceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/not_assigned"
            android:textStyle="bold" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/CBVibrateP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:text="@string/vibrate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BTNMacrosP1"
            style="@style/ButtonNeutral"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:text="@string/macros"
            android:textSize="12sp" />

        <Button
            android:id="@+id/BTNResetP1"
            style="@style/ButtonNeutral"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textSize="12sp" />

        <Button
            android:id="@+id/BTNAssignP1"
            style="@style/ButtonNeutral"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/assign"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
