<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpu_name" />

        <Spinner
            android:id="@+id/SGPUName"
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offscreen_rendering_mode" />

        <Spinner
            android:id="@+id/SOffscreenRenderingMode"
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_memory_size" />

        <Spinner
            android:id="@+id/SVideoMemorySize"
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:entries="@array/video_memory_size_entries"
            android:spinnerMode="dialog" />
    </LinearLayout>
</ScrollView>
