<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MacrosRoot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/MacrosColumn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:paddingBottom="4dp"
            android:text="@string/macros_hint"
            android:textAlignment="center"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/BTDisableAllLocal"
                style="@style/ButtonNeutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_all" />

            <Button
                android:id="@+id/BTEnableAllLocal"
                style="@style/ButtonNeutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/enable_all" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVMacros"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:fadeScrollbars="false"
            android:scrollbars="vertical" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/SWIncludeTriggers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/include_triggers_note"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
